--- a/.env.example
+++ b/.env.example
@@ -50,3 +50,11 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+#podio
+PODIO_APP_NAME=""
+PODIO_APP_CLIENT=""
+PODIO_APP_SECRATE=""
+PODIO_APP_REDIRECTURL=""
+PODIO_APP_USERNAME=""
+PODIO_APP_PASSWORD=""
